--- a/app/src/main/res/layout/check_item.xml
+++ b/app/src/main/res/layout/check_item.xml
@@ -3,18 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/check_list_background"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:padding="6dp">
+    android:layout_height="@dimen/check_card_height">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_check_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbarStyle="outsideOverlay"
-        app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="6dp"
+        app:cardCornerRadius="@dimen/check_card_corner_radius"
+        app:cardElevation="@dimen/card_elevation"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -32,14 +31,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/default_check_item_name"
-                    android:textSize="30sp"/>
+                    android:textSize="@dimen/check_card_text_main"/>
 
                 <ImageView
                     android:id="@+id/options_icon_check_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_more_vert_black_24dp"
-                    android:layout_gravity="center_vertical|end"/>
+                    android:layout_gravity="center_vertical|end"
+
+                    android:contentDescription="@string/action_options"/>
 
             </FrameLayout>
 
@@ -58,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end|right"
-            android:textSize="24sp"
+            android:textSize="@dimen/check_card_text_sub"
             android:padding="@dimen/text_padding"
             android:text="@string/default_check_item_total"/>
 
