--- a/app/src/main/res/layout/check_participant_item.xml
+++ b/app/src/main/res/layout/check_participant_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="@dimen/check_participant_item_height"
     android:background="@drawable/shape_border"
     android:padding="@dimen/linear_layout_padding">
 
@@ -31,14 +31,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/text_padding"
-                android:text="Check Total"/>
+                android:text="@string/default_check_participant_item_total"/>
 
             <ImageView
                 android:id="@+id/options_icon_check_participant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/text_padding"
-                android:src="@drawable/ic_more_vert_black_24dp"/>
+                android:src="@drawable/ic_more_vert_black_24dp"
+
+                android:contentDescription="@string/action_options"/>
 
         </LinearLayout>
 
