--- a/app/src/main/res/layout/fragment_change_modifier_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_modifier_dialog.xml
@@ -18,6 +18,7 @@
             android:hint="@string/dialog_modifier_amount"
             android:text=""
             android:maxLines="1"
+            android:inputType="number"
             android:padding="@dimen/dialog_padding"/>
 
     </android.support.design.widget.TextInputLayout>
