--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="linear_layout_padding">8dp</dimen>
     <dimen name="text_padding">8dp</dimen>
 
+    <!--Text Sizes-->
+    <dimen name="text_body">16sp</dimen>
 
     <!--Material Design Dimensions-->
     <dimen name="fab_elevation">6dp</dimen>
@@ -15,13 +17,45 @@
     <dimen name="fab_margin_plus_frame_height">66dp</dimen>
     <dimen name="app_bar_layout_height">0dp</dimen>
     <dimen name="app_bar_layout_elevation">4dp</dimen>
+    <dimen name="card_elevation">6dp</dimen>
 
-    <!--Dimensions for activity_check_detailil.xml-->
+    <!--Dimensions for activity_check_detail.xml-->
     <dimen name="edit_check_total_frame_height">80dp</dimen>
     <dimen name="edit_check_total_frame_elevation">4dp</dimen>
     <dimen name="edit_check_padding">8dp</dimen>
 
     <!--Dimensions for Dialogs-->
     <dimen name="dialog_padding">10dp</dimen>
+
+    <!--Dimensions for activity_login.xml-->
+    <dimen name="sign_out_padding">16dp</dimen>
+    <dimen name="progress_bar_margin">8dp</dimen>
+
+    <!--Dimensions for check_item.xml-->
+    <dimen name="check_card_height">150dp</dimen>
+    <dimen name="check_card_corner_radius">2dp</dimen>
+    <dimen name="check_card_text_main">30sp</dimen>
+    <dimen name="check_card_text_sub">24sp</dimen>
+
+    <!--Dimensions for check_item_item.xml-->
+    <dimen name="check_item_item_height">80dp</dimen>
+    <dimen name="check_item_item_text_name">16sp</dimen>
+    <dimen name="check_item_item_text_sub">12sp</dimen>
+
+    <!--Dimensions for check_participant_item.xml-->
+    <dimen name="check_participant_item_height">50dp</dimen>
+
+    <!--Dimensions for fragment_check_detail_modifiers.xml-->
+    <dimen name="modifier_item_height">80dp</dimen>
+    <dimen name="modifier_text_width">75dp</dimen>
+    <dimen name="modifier_value_width">50dp</dimen>
+    <dimen name="modifier_value_height">1dp</dimen>
+    <dimen name="modifier_value_margin_top">6dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 
 </resources>
