--- a/app/src/main/res/menu/menu_participants.xml
+++ b/app/src/main/res/menu/menu_participants.xml
@@ -5,6 +5,6 @@
         android:id="@+id/participants_search"
         android:icon="@drawable/ic_action_action_search"
         android:orderInCategory="100"
-        android:title="Search Participants"
+        android:title="@string/search_participants"
         app:showAsAction="always"/>
 </menu>
